app/assets/stylesheets/static_pages.scss
// Place all the styles related to the StaticPages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

html {

	/*background: image-url('home_background.jpg') no-repeat center center fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	  -o-background-size: cover;
	  background-size: cover;
	background-color: transparent;*/
	width: 100%;
	overflow-x: hidden;
}
div.navbar-header {
	padding-left: 10px;
}
.navbar-brand {
	padding-top: 5px;
	padding-bottom: 0;	
}
nav#otherPagesBar {
	
	margin-bottom: 0;
	li:hover {
		background: #FFF;		
		transition: background-color 1s;
	}
	li a:hover {
		color: #000;
		transition: color 1s;
	}
}
div.container-fluid {
	padding-left: 0;
	padding-right: 0;
	margin: 0;
}
div.jumbotron {
	padding: 0;
	img {
		display: block;
		margin: 0 auto;
	}
}

div#content {
	max-width: 930px;
	margin: 0 auto;
	padding-right: 20px;
	padding-left: 5px;
	div.title {
		border-bottom: 1px dotted #000;
		margin-bottom: 20px;
	}
	div#officersPage {
		
		// margin: 0 auto;
		div#officerPics {
			// width: 500px;
			// margin-left: 0;
			// padding-right: 0;
			// border-left: 1px solid #949494;
			div.officer {
				display: inline;
				img {
					height: 140px;
					width: 140px;
					margin-bottom: 5px;
					margin-right: 5px;
					cursor: move;
				}
				div.description {
					display: none;
				}
				div.modal {
					h4 {
						font-weight: bold;
					}
					p {
						font-size: 14px;
					}
				}
			}			

		}
		div#moreDetails {
			max-height: 450px;
			margin-left: 0;						
		}
	}
}

div#calendar {
	width: 800px;
	margin: 0 auto;
}

textarea {
	resize: vertical;
}

div.selectMenu{
	padding: 0;
}

